<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_game_over"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/message_game_over"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_quit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:background="@drawable/button_red"
            android:padding="5dp"
            android:text="@string/button_quit"
            android:textColor="@android:color/black"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/bt_replay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dialog_margin"
            android:background="@drawable/button_green"
            android:padding="5dp"
            android:text="@string/button_replay"
            android:textColor="@android:color/black"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

</LinearLayout>